<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:gravity="center_vertical"
	>
    
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="horizontal"
		android:layout_gravity="center"
		android:gravity="center_vertical"
		android:layout_weight="1">
		<TableRow
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/speed_slow"
				android:textColor="@color/gray"
				android:textSize="20sp"
				android:gravity="center"
				android:layout_marginLeft="16dp"/>

			<SeekBar
				android:layout_width="wrap_content"
				android:layout_weight="1"
				android:id="@+id/gv_speed_bar"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:max="19"
				android:minHeight="5dp"
				android:maxHeight="5dp"
				android:progressDrawable="@drawable/seekbar_style"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/speed_fast"
				android:textColor="@color/gray"
				android:textSize="20sp"
				android:gravity="center"
				android:layout_marginRight="16dp" />

			<CheckBox
				android:id="@+id/gv_order"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/backward"
				android:textColor="@color/gray"
				android:textSize="20sp"
				android:layout_marginRight="16dp"
				android:background="@color/transparent"
				/>
		</TableRow>
	</TableLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/filter_rv"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/transparent"
		android:scrollbars="none"
		android:layout_margin="4dp"
		/>
	
</LinearLayout>