<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <GridView
        android:id="@+id/import_gridview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnWidth="@dimen/image_thumbnail_size"
        android:horizontalSpacing="@dimen/image_thumbnail_spacing"
        android:verticalSpacing="@dimen/image_thumbnail_spacing"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:drawSelectorOnTop="true"
        android:listSelector="?android:attr/selectableItemBackground"
        android:descendantFocusability="blocksDescendants"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        >

        <FrameLayout
            android:id="@+id/selected_image_container_frame"
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="false"
                android:foregroundGravity="left"
                android:scrollbars="none"
                android:padding="0dp"

                >
                <LinearLayout
                    android:id="@+id/import_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="left"
                    android:animateLayoutChanges="true"
                    android:visibility="gone"
                    >
                </LinearLayout>

            </HorizontalScrollView>
            <TextView
                android:id="@+id/selected_images_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/no_image_selected"
                />
            <TextView
                android:id="@+id/frame_num_indicator"
                android:layout_gravity="top|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@color/darkgreen"
                android:textColor="@color/white"
                android:padding="5dp"/>
        </FrameLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle" >
            <Button
                android:id="@+id/import_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normal_btn_press_selector"
                android:text="@string/cancel_txt"/>
            <Button
                android:id="@+id/import_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normal_btn_press_selector"
                android:text="@string/reset_txt"/>
            <Button
                android:id="@+id/import_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/normal_btn_press_selector"
                android:text="@string/ok_txt"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>