<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerVertical"
    android:showDividers="middle"
    >

    <TextView
        android:id="@+id/path_select_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        >
        <ImageButton
            android:id="@+id/back_level"
            android:contentDescription="@string/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/circle_btn_press_light_selector"
            android:src="@drawable/up"/>
        <TextView
            android:id="@+id/cur_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/darkgreen"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/path_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:gravity="bottom"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle" >
        <Button
            android:id="@+id/path_select_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/path_item_selector"
            android:text="@string/cancel_txt"/>
        <Button
            android:id="@+id/path_select_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/path_item_selector"
            android:text="@string/confirm_txt"/>
    </LinearLayout>

</LinearLayout>