<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageButton
            android:contentDescription="@string/desc"
            android:id="@+id/text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rc_btn_press_light_selector"
            android:src="@drawable/text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <ImageButton
            android:contentDescription="@string/desc"
            android:id="@+id/text_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rc_btn_press_light_selector"
            android:src="@drawable/font"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:scrollbars="none"
            >
            <LinearLayout
                android:id="@+id/text_color"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/color_picker_height"
                android:orientation="horizontal"
                >
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        >
        <Button
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rc_btn_press_light_selector"
            android:text="@string/select_all"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center_vertical"
            android:minHeight="@dimen/color_picker_height"
            android:minWidth="@dimen/color_picker_height"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/gif_frame_container"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:scrollbars="none"
            />

        <Button
            android:id="@+id/select_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rc_btn_press_light_selector"
            android:text="@string/ok_txt"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_gravity="center_vertical"
            android:minHeight="@dimen/color_picker_height"
            android:minWidth="@dimen/color_picker_height"/>
    </LinearLayout>
</LinearLayout>
